Removed Borders and Fixed Spacing

--- a/src/Components/Game/Game.css
+++ b/src/Components/Game/Game.css
@@ -20,20 +20,19 @@
   color: white;
   padding-left: 10%;
   padding-bottom: 10px;
-  border: solid;
+
 }
 
 .container-interact {
   display: inline-flex;
   min-width: 90%;
-  border: solid;
-  border-color: white;
+
   justify-content:space-between;
 }
 
 .missing-info {
   display: grid;
-  grid-template-rows: repeat(3, 100px);
+  grid-template-rows: repeat(3, 80px);
   gap: 10px;
   grid-auto-flow: column;
   grid-auto-rows: 600px 500px;
@@ -42,18 +41,16 @@
   color: white;
   margin-left: 12%;
   padding-right: 10%;
-  border: solid;
+
 }
 
 .item {
-  margin: 16px 0px;
-  border: solid;
-  border-color: white;
+  margin: 16px 25px;
+
 }
 
 .button-wrapper { 
-  border: solid;
-  border-color: aliceblue;
+
 }
 
 .gamebutton {
